feat(be): dump files